--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-jshint": "~0.3.0",
+    "grunt-contrib-connect": "0.3.x",
+    "grunt-contrib-watch": "0.5.x",
     "grunt-karma": "~0.3.0",
     "matchdep": "~0.1.1"
   },
