--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-connect": "0.3.x",
     "grunt-contrib-watch": "0.5.x",
     "grunt-karma": "~0.3.0",
+    "grunt-sed": "~0.1.1",
     "matchdep": "~0.1.1"
   },
   "scripts": {
