--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "grunt-contrib-watch": "0.5.x",
     "grunt-karma": "~0.3.0",
     "grunt-sed": "~0.1.1",
-    "matchdep": "~0.1.1"
+    "matchdep": "~0.1.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
