--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "grunt-contrib-connect": "0.3.x",
     "grunt-contrib-watch": "0.5.x",
     "grunt-karma": "~0.3.0",
-    "grunt-sed": "~0.1.1",
     "matchdep": "~0.1.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7"
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-angular-templates": "~0.4.7",
+    "grunt-contrib-cssmin": "~0.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
