--- a/package.json
+++ b/package.json
@@ -10,23 +10,13 @@
     "grunt-contrib-jshint": "~0.3.0",
     "grunt-contrib-connect": "0.3.x",
     "grunt-contrib-watch": "0.5.x",
-    "grunt-karma": "~0.3.0",
     "matchdep": "~0.1.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-angular-templates": "~0.4.7",
     "grunt-contrib-cssmin": "~0.7.0",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.5",
-    "requirejs": "~2.1.10",
-    "karma-requirejs": "~0.2.1",
-    "karma-coffee-preprocessor": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.2",
-    "karma": "~0.10.9",
-    "karma-junit-reporter": "~0.2.1"
+    "karma-junit-reporter": "~0.2.1",
+    "grunt-karma": "~0.6.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
