--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "Cinema6 UI library",
   "main": "index.js",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-jshint": "~0.3.0",
-    "grunt-contrib-connect": "0.3.x",
-    "grunt-contrib-watch": "0.5.x",
-    "matchdep": "~0.1.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7",
+    "grunt": "^0.4.4",
     "grunt-angular-templates": "~0.4.7",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "0.3.x",
+    "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-cssmin": "~0.7.0",
-    "karma-junit-reporter": "~0.2.1",
-    "grunt-karma": "~0.6.2"
+    "grunt-contrib-jshint": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-watch": "0.5.x",
+    "grunt-karma": "^0.8.3",
+    "karma": "^0.12.14",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.1",
+    "matchdep": "~0.1.1",
+    "requirejs": "^2.1.11"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
