--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-jshint": "~0.3.0",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "0.5.x",
     "grunt-karma": "^0.8.3",
