Upgrade to jasmine 2.0.

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -8,7 +8,7 @@
   "curly": true,
   "eqeqeq": true,
   "immed": true,
-  "latedef": true,
+  "latedef": "nofunc",
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
@@ -22,6 +22,11 @@
     "require" : true,
     "define": true,
     "module" : true,
+    "describe": true,
+    "it": true,
+    "beforeEach", true,
+    "afterEach": true,
+    "jasmine": true,
     "__dirname" : true,
     "process" : true,
     "__C6_APP_BASE_URL__" : true
